--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "css-build": "node-sass   _sass/ --output dist/css/",
+    "css-watch": "npm run css-build -- --watch ",
+    "electron": "electron .",
+    "start": "npm-run-all --parallel css-watch electron"
   },
   "devDependencies": {
     "electron": "^22.0.2"
